Removing many Sonar and javac warning. Corrections of many typo